--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.1.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2"
   }
 }
